--- a/Projects/01 - I Am Rich/01 - I Am Rich/Storyboard/Base.lproj/Main.storyboard
+++ b/Projects/01 - I Am Rich/01 - I Am Rich/Storyboard/Base.lproj/Main.storyboard
@@ -15,8 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="ruby" translatesAutoresizingMaskIntoConstraints="NO" id="J4A-nu-QoY">
-                                <rect key="frame" x="24" y="46" width="346" height="804"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="ruby" translatesAutoresizingMaskIntoConstraints="NO" id="J4A-nu-QoY">
+                                <rect key="frame" x="24" y="46" width="370" height="738"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="J4A-nu-QoY" secondAttribute="height" multiplier="69:134" id="fbz-AD-959"/>
                                 </constraints>
@@ -32,6 +32,9 @@
                                 <rect key="frame" x="136.5" y="792" width="141" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Pulsame y seras rico"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nKY-Sx-74Z"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.86431930737037632" green="0.55643278969680132" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -47,6 +50,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="buttonPush" destination="Xmp-Gg-Bb1" id="HJ1-k5-NXc"/>
+                        <outlet property="imageViewDiamond" destination="J4A-nu-QoY" id="MzD-lj-kIq"/>
+                        <outlet property="labelTitle" destination="NZm-sX-YJ3" id="1NA-Dx-V5z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
